Close browser RouterProvider binding on renderer death

BUG=683794

Review-Url: https://codereview.chromium.org/2652573002
Cr-Commit-Position: refs/heads/master@{#445523}

Former-commit-id: 4d9f1c2e1cf7a167d2e0737692b18e5e68cbe71b